# ya

./: .clang-format  .clangd  .emmyrc.json  .gitattributes  .gitignore  .gitignore.swp  .gitmodules  AGENTS.md  CMakeLists.txt  COMPLETE_CODE_INDEX.md  Cargo.toml  LICENSE  README.md  SCENE_ANALYSIS_PART1.md  SCENE_ANALYSIS_PART2.md  SCENE_ANALYSIS_SUMMARY.md  base.cpp  base.h  compile_commands.json  glfw_state.h  graphics.h  imgui.ini  log.cpp  log.h  lua_annotation.lua  main.cpp  makefile  requirements.txt  sdl_state.h  vulkan_state.cpp  vulkan_state.h  xmake.lua
.agent/: AGENTS.md
.agent/agents/: AGENTS.md
.agent/memories/: AGENTS.md  animation_system_debug.md
.agent/misc/: README_ANALYSIS.md  RENDER_SYSTEM_ANALYSIS.md  RENDER_SYSTEM_CODE_REFERENCE.md  RENDER_SYSTEM_FLOW_DIAGRAM.txt  code_snippets.md  mesh_analysis.md  research_report_engine_async_loading.md
.agent/prompts/: AGENTS.md
.agent/skills/: AGENTS.md
.ai/render-rfeactor/: Effective harnesses for long-running agents.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: gamedev.agent.md  plan-harness.agent.md
.github/memories/: animation_system_debug.md
.github/prompts/: speckit.constitution.prompt.md
.specify/memory/: constitution.md
.vim/: coc-settings.json
Docs/: ComponentSerializationQuickStart.md  CoordinateSystemGuide.md  CrossPlatformRenderingCoordinateSystems.md  DynamicRenderingQuickStart.md  DynamicRenderingRefactor.md  EditorViewportIntegration.md  FilePicker.md  FileSystemMountPoints.md  Progress.md  README.zh-CN.md  Render.drawio  RenderThreadSplitPlan.md  SceneSerializationDesign.md  ShaderHotReloadArchitecture.md  TypeSystemRefactoring.md  UITypeAutoRegistration.md
Engine/: Neon.xmake.lua  YA.xmake.lua  xmake.lua
Engine/Config/: Engine.json  Engine.jsonc
Engine/Plugins/: Plugins.xmake.lua
Engine/Plugins/test.cc/: CMakeLists.txt  IMPLEMENTATION.md  QUICKSTART.md  README.md  xmake.lua
Engine/Plugins/test.cc/example/: BasicTests.cpp  CMakeLists.txt  xmake.lua
Engine/Plugins/test.cc/include/: MinimalTest.h  SimpleHeader.h  TestFramework.h
Engine/Plugins/test.cc/include/test.cc/: framework.h
Engine/Plugins/test.cc/src/: BasicTests.cpp  TestFramework.cpp  dll.cpp  framework.cpp  framework.h  test_runner.cpp
Engine/Plugins/test.cc/vscode/: .gitignore  package-lock.json  package.json
Engine/Plugins/test.cc/vscode/src/: extension.ts  testController.ts
Engine/Programs/: Programs.xmake.lua
Engine/Shader/: .gitignore  Shader.xmake.lua  glsl_gen_header.py  shader_config.py  slang_gen_header.py  xmake.lua
Engine/Source/: Entry.cpp  ImGuiHelper.cpp  ImGuiHelper.h  WindowProvider.cpp  WindowProvider.h
Engine/Test/: xmake.lua
Example/: xmake.lua
Example/GreedSnake/: xmake.lua
Example/HelloCube/: xmake.lua
Example/HelloMaterial/: xmake.lua
Example/HelloTexure/: xmake.lua
Script/: InjectMacro.bat  InjectMacro.sh  header_deps.py  import_macros.py  import_macros.sh  setup_3rd_party.py  setup_vulkan_sdk_macos.py  ya_glslang_validator.py
Scripts/: import_macros.lua  import_macros.py
engine/: xmake.lua
logs/: console_log
scripts/: GenCompileCommands.sh
src/: CMakeLists.txt  app.rs  asset.rs  camera.rs  geo.rs  lib.rs  main.cc  main.rs  precompile.cc  render_2d.rs  render_target.rs  scene.rs  state.rs
src/App/: main.cc
src/Gloria/: minimal.cc
src/Gloria/glinternal/: VertexBuffer.cc  core.cc
src/Gloria/logx/: spdx.cc
src/Gloria/ownkit/: CMakeLists.txt  kit.cc  uitil.cc
src/OwnKit/: CMakeLists.txt  gl.cc  kit.cc  precompile.cc  uitil.cc
src/ecs/: dense_map.rs  mod.rs
src/glinternal/: Shader.cc  VertexBuffer.cc  core.cc  init.cc
src/logx/: CMakeLists.txt  spdlogx.cc  spdx.cc
src/pipeline/: mod.rs  pl_2d.rs  pl_3d.rs
src/state/: frame_plan.rs  mod.rs  pass_2d.rs  pass_3d.rs  pass_deferred.rs
src/ui/: mod.rs
test/: bus.cpp  enum_name.cpp  test01.cc  type_size.c  type_size.cpp  xmake.lua
xmake/: Helper.lua  lua_annotation.lua  packages.lua  rule.lua  task.lua  xmake.lua
(+963 files in other folders)
