[package]
name = "neon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.5"
wgpu = "26.0.0"
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.3.0"
assimp = "0.3.1"
bytemuck = "1.12.1"
glam = { version = "0.29", features = ["bytemuck"] }
