[package]
name = "neon-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.5"
wgpu = "26.0.0"
env_logger = "0.11.5"
log = "0.4.22"
assimp = "0.3.1"                                     # 保持当前版本
gltf = "1.4"                                         # 专门的 glTF 库
bytemuck = "1.12.1"
glam = { version = "0.29", features = ["bytemuck"] }
cfg-if = "1.0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# 需要避免在 wasm 中添加 pollster 依赖，否则会导致 wasm 加载时报错：
# An error occurred loading "XXX": TypeError: Failed to resolve module specifier "env". Relative references must start with either "/", "./", or "../".
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element"] }
